# CrewAI_resume_optimizer

./: .gitignore  README.md  requirements.txt
Resume_Database/DeepPavlov.ai/: resume_analysis.md  tailored_resume.md
Resume_Database/Разработчик_AI_решений /: interview_materials.md  resume_analysis.md  Карпенко Сергей.md
outputs/: interview_materials.md  resume_analysis.md  tailored_resume.md
special_resume/: .gitignore  model.pkl  pyproject.toml  training_data.pkl
special_resume/knowledge/: user_preference.txt
special_resume/src/special_resume/: crew.py  crew_trained.py  main.py
special_resume/src/special_resume/config/: agents.yaml  tasks.yaml
special_resume/src/special_resume/tools/: custom_tool.py  test_funktion.py
