[project]
name = "special_resume"
version = "0.1.0"
description = "Special_resume using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
special_resume = "special_resume.main:run"
run_crew = "special_resume.main:run"
train = "special_resume.main:train"
replay = "special_resume.main:replay"
test = "special_resume.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
